fix: prevent layout shift from connection timer in web dashboard
Add min-width and right-alignment to the connection indicator so the
timer text ("Just now", "5s ago", etc.) doesn't cause adjacent header
elements to shift when the text width changes.

--- a/packages/hzl-web/src/ui/index.html
+++ b/packages/hzl-web/src/ui/index.html
@@ -109,6 +109,8 @@
       gap: 6px;
       font-size: 11px;
       color: var(--text-muted);
+      min-width: 85px;
+      justify-content: flex-end;
     }
 
     .connection-dot {
