--- a/packages/hzl-web/src/ui/index.html
+++ b/packages/hzl-web/src/ui/index.html
@@ -1105,6 +1105,48 @@
       color: var(--accent);
       font-weight: 700;
     }
+    .calendar-day-tasks {
+      display: flex;
+      flex-direction: column;
+      gap: 2px;
+      flex: 1;
+    }
+    .calendar-mini-card {
+      background: var(--bg-primary);
+      border-left: 3px solid var(--text-muted);
+      border-radius: 3px;
+      padding: 2px 4px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 4px;
+      overflow: hidden;
+    }
+    .calendar-mini-card:hover { background: var(--bg-hover); }
+    .calendar-mini-title {
+      font-size: 11px;
+      color: var(--text-primary);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      flex: 1;
+    }
+    .calendar-mini-project {
+      font-size: 9px;
+      color: var(--text-muted);
+      background: var(--bg-card);
+      padding: 0 4px;
+      border-radius: 3px;
+      white-space: nowrap;
+      flex-shrink: 0;
+    }
+    .calendar-more-link {
+      font-size: 11px;
+      color: var(--accent);
+      cursor: pointer;
+      padding: 1px 4px;
+    }
+    .calendar-more-link:hover { text-decoration: underline; }
     .calendar-empty-state {
       text-align: center;
       color: var(--text-muted);
@@ -1852,10 +1894,44 @@
       return columns;
     }
 
+    const STATUS_COLORS = {
+      backlog: 'var(--status-backlog)',
+      ready: 'var(--status-ready)',
+      in_progress: 'var(--status-in-progress)',
+      blocked: 'var(--status-blocked)',
+      done: 'var(--status-done)',
+    };
+
+    function renderMiniCard(task) {
+      const color = STATUS_COLORS[task.status] || 'var(--text-muted)';
+      return `<div class="calendar-mini-card" data-task-id="${task.task_id}" style="border-left-color: ${color}">
+        <span class="calendar-mini-title">${escapeHtml(task.title)}</span>
+        <span class="calendar-mini-project">${escapeHtml(task.project)}</span>
+      </div>`;
+    }
+
     function renderCalendar() {
       const now = new Date();
       const isCurrentMonth = calendarYear === now.getFullYear() && calendarMonth === now.getMonth();
       const todayDate = now.getDate();
+      const MAX_CARDS = 3;
+
+      // Filter tasks to current month in local timezone
+      const projectVal = projectFilter.value;
+      const monthTasks = tasks.filter(t => {
+        if (!t.due_at) return false;
+        if (projectVal && t.project !== projectVal) return false;
+        const d = new Date(t.due_at);
+        return d.getFullYear() === calendarYear && d.getMonth() === calendarMonth;
+      });
+
+      // Group by local day
+      const tasksByDay = {};
+      for (const t of monthTasks) {
+        const day = new Date(t.due_at).getDate();
+        if (!tasksByDay[day]) tasksByDay[day] = [];
+        tasksByDay[day].push(t);
+      }
 
       // Month label
       const monthLabel = new Date(calendarYear, calendarMonth, 1)
@@ -1874,8 +1950,14 @@
           <button class="calendar-nav-btn" id="calNext">&rarr;</button>
           <button class="calendar-nav-btn" id="calToday">Today</button>
         </div>
-        <div class="calendar-grid">
       `;
+
+      // Empty state
+      if (monthTasks.length === 0) {
+        html += `<div class="calendar-empty-state">No tasks with due dates in ${monthLabel}</div>`;
+      }
+
+      html += `<div class="calendar-grid">`;
 
       // Day-of-week headers
       const dayNames = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'];
@@ -1892,10 +1974,21 @@
       // Current month days
       for (let d = 1; d <= daysInMonth; d++) {
         const isToday = isCurrentMonth && d === todayDate;
-        html += `<div class="calendar-day${isToday ? ' today' : ''}" data-date="${calendarYear}-${String(calendarMonth + 1).padStart(2, '0')}-${String(d).padStart(2, '0')}">`;
+        const dateStr = `${calendarYear}-${String(calendarMonth + 1).padStart(2, '0')}-${String(d).padStart(2, '0')}`;
+        html += `<div class="calendar-day${isToday ? ' today' : ''}" data-date="${dateStr}">`;
         html += `<span class="calendar-day-number">${d}</span>`;
-        html += `<div class="calendar-day-tasks"></div>`;
-        html += `</div>`;
+        html += `<div class="calendar-day-tasks">`;
+
+        const dayTasks = tasksByDay[d] || [];
+        const visible = dayTasks.slice(0, MAX_CARDS);
+        for (const t of visible) {
+          html += renderMiniCard(t);
+        }
+        if (dayTasks.length > MAX_CARDS) {
+          html += `<div class="calendar-more-link" data-date="${dateStr}">+${dayTasks.length - MAX_CARDS} more</div>`;
+        }
+
+        html += `</div></div>`;
       }
 
       // Trailing days to fill last week
