feat: wire calendar card clicks to modal and show due_at
Calendar mini card clicks (in day cells and popover) open the existing
task detail modal via event delegation. Add conditional Due Date field
to the modal metadata grid, formatted with toLocaleDateString().

--- a/packages/hzl-web/src/ui/index.html
+++ b/packages/hzl-web/src/ui/index.html
@@ -2265,6 +2265,12 @@
                 <div class="modal-meta-label">Created</div>
                 <div class="modal-meta-value">${formatTime(data.task.created_at)}</div>
               </div>
+              ${data.task.due_at ? `
+              <div class="modal-meta-item">
+                <div class="modal-meta-label">Due Date</div>
+                <div class="modal-meta-value">${new Date(data.task.due_at).toLocaleDateString()}</div>
+              </div>
+              ` : ''}
             </div>
           </div>
         `;
