--- a/packages/hzl-web/src/ui/index.html
+++ b/packages/hzl-web/src/ui/index.html
@@ -1031,6 +1031,158 @@
         display: block;
       }
     }
+
+    /* Calendar View */
+    .calendar-container {
+      padding: 16px 24px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .calendar-container.hidden { display: none; }
+    .calendar-header {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      margin-bottom: 16px;
+    }
+    .calendar-nav-btn {
+      font-family: var(--font-mono);
+      font-size: 14px;
+      background: var(--bg-card);
+      color: var(--text-primary);
+      border: 1px solid var(--border);
+      border-radius: 6px;
+      padding: 4px 10px;
+      cursor: pointer;
+    }
+    .calendar-nav-btn:hover { background: var(--bg-hover); }
+    .calendar-month-label {
+      font-size: 18px;
+      font-weight: 600;
+      color: var(--text-primary);
+      min-width: 200px;
+      text-align: center;
+    }
+    .calendar-grid {
+      display: grid;
+      grid-template-columns: repeat(7, 1fr);
+      gap: 1px;
+      background: var(--border);
+      border: 1px solid var(--border);
+      border-radius: 8px;
+      overflow: hidden;
+    }
+    .calendar-day-header {
+      background: var(--bg-card);
+      color: var(--text-muted);
+      font-size: 12px;
+      font-weight: 600;
+      text-align: center;
+      padding: 8px 4px;
+      text-transform: uppercase;
+    }
+    .calendar-day {
+      background: var(--bg-card);
+      min-height: 100px;
+      padding: 4px;
+      display: flex;
+      flex-direction: column;
+    }
+    .calendar-day.other-month {
+      opacity: 0.35;
+    }
+    .calendar-day.today {
+      border: 2px solid var(--accent);
+      border-radius: 2px;
+    }
+    .calendar-day-number {
+      font-size: 12px;
+      color: var(--text-secondary);
+      margin-bottom: 4px;
+      font-weight: 500;
+    }
+    .calendar-day.today .calendar-day-number {
+      color: var(--accent);
+      font-weight: 700;
+    }
+    .calendar-day-tasks {
+      display: flex;
+      flex-direction: column;
+      gap: 2px;
+      flex: 1;
+    }
+    .calendar-mini-card { border-left-color: var(--text-muted); }
+    .calendar-mini-card[data-status="backlog"] { border-left-color: var(--status-backlog); }
+    .calendar-mini-card[data-status="ready"] { border-left-color: var(--status-ready); }
+    .calendar-mini-card[data-status="in_progress"] { border-left-color: var(--status-in-progress); }
+    .calendar-mini-card[data-status="blocked"] { border-left-color: var(--status-blocked); }
+    .calendar-mini-card[data-status="done"] { border-left-color: var(--status-done); }
+    .calendar-mini-card {
+      background: var(--bg-primary);
+      border-left: 3px solid;
+      border-radius: 3px;
+      padding: 2px 4px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 4px;
+      overflow: hidden;
+    }
+    .calendar-mini-card:hover { background: var(--bg-hover); }
+    .calendar-mini-title {
+      font-size: 11px;
+      color: var(--text-primary);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      flex: 1;
+    }
+    .calendar-mini-project {
+      font-size: 9px;
+      color: var(--text-muted);
+      background: var(--bg-card);
+      padding: 0 4px;
+      border-radius: 3px;
+      white-space: nowrap;
+      flex-shrink: 0;
+    }
+    .calendar-more-link {
+      font-size: 11px;
+      color: var(--accent);
+      cursor: pointer;
+      padding: 1px 4px;
+    }
+    .calendar-more-link:hover { text-decoration: underline; }
+    .calendar-popover {
+      position: absolute;
+      z-index: 100;
+      background: var(--bg-card);
+      border: 1px solid var(--border);
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      padding: 8px;
+      min-width: 200px;
+      max-width: 280px;
+      max-height: 300px;
+      overflow-y: auto;
+    }
+    .calendar-popover-header {
+      font-size: 12px;
+      font-weight: 600;
+      color: var(--text-secondary);
+      margin-bottom: 6px;
+      padding-bottom: 4px;
+      border-bottom: 1px solid var(--border);
+    }
+    .calendar-popover .calendar-mini-card {
+      margin-bottom: 2px;
+    }
+    .calendar-empty-state {
+      text-align: center;
+      color: var(--text-muted);
+      padding: 32px 16px;
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
@@ -1040,6 +1192,7 @@
       <span class="logo">hzl dashboard</span>
       <div class="view-toggle" id="viewToggle">
         <button class="view-btn active" data-view="kanban">Kanban</button>
+        <button class="view-btn" data-view="calendar">Calendar</button>
         <button class="view-btn" data-view="graph">Graph</button>
       </div>
     </div>
@@ -1164,6 +1317,9 @@
     </div>
   </main>
 
+  <!-- Calendar View Container -->
+  <div id="calendarContainer" class="calendar-container hidden"></div>
+
   <!-- Graph View Container -->
   <div id="graphContainer" class="graph-container hidden">
     <div class="graph-loading" id="graphLoading">
@@ -1216,6 +1372,8 @@
     let nodeStatusMap = new Map();
     let pendingModalRequestId = 0; // Track modal fetch requests to avoid race conditions
     let isPolling = false; // Guard against concurrent poll() calls
+    let calendarYear = new Date().getFullYear();
+    let calendarMonth = new Date().getMonth(); // 0-indexed
 
     // DOM Elements
     const dateFilter = document.getElementById('dateFilter');
@@ -1238,6 +1396,7 @@
     const showSubtasksCheckbox = document.getElementById('showSubtasks');
     const viewToggle = document.getElementById('viewToggle');
     const board = document.getElementById('board');
+    const calendarContainer = document.getElementById('calendarContainer');
     const graphContainer = document.getElementById('graphContainer');
     const graphLoading = document.getElementById('graphLoading');
 
@@ -1631,9 +1790,15 @@
 
     // API calls
     async function fetchTasks() {
-      const since = dateFilter.value;
       const project = projectFilter.value;
-      const url = `/api/tasks?since=${since}${project ? `&project=${encodeURIComponent(project)}` : ''}`;
+      let url;
+      if (activeView === 'calendar') {
+        const mm = String(calendarMonth + 1).padStart(2, '0');
+        url = `/api/tasks?due_month=${calendarYear}-${mm}${project ? `&project=${encodeURIComponent(project)}` : ''}`;
+      } else {
+        const since = dateFilter.value;
+        url = `/api/tasks?since=${since}${project ? `&project=${encodeURIComponent(project)}` : ''}`;
+      }
       const res = await fetch(url);
       if (!res.ok) throw new Error('Failed to fetch tasks');
       const data = await res.json();
@@ -1713,7 +1878,7 @@
 
       let extra = '';
       if (isBlocked) {
-        extra = `<div class="card-blocked">Blocked by: ${task.blocked_by.map(id => id.slice(0, 8)).join(', ')}</div>`;
+        extra = `<div class="card-blocked">Blocked by: ${task.blocked_by.map(id => escapeHtml(id.slice(0, 8))).join(', ')}</div>`;
       }
       if (task.status === 'in_progress' && task.lease_until) {
         const remaining = formatTimeRemaining(task.lease_until);
@@ -1733,7 +1898,7 @@
           ${subtaskHtml}
           <div class="card-meta">
             <span class="card-project">${escapeHtml(task.project)}</span>
-            ${task.assignee ? `<span class="card-agent">${task.assignee.slice(0, 8)}</span>` : ''}
+            ${task.assignee ? `<span class="card-agent">${escapeHtml(task.assignee.slice(0, 8))}</span>` : ''}
           </div>
           ${extra}
         </div>
@@ -1758,6 +1923,217 @@
       }
       return columns;
     }
+
+    // Calendar state shared between renderCalendar and popover
+    let calendarTasksByDay = {};
+
+    function renderMiniCard(task) {
+      return `<div class="calendar-mini-card" data-task-id="${task.task_id}" data-status="${task.status}">
+        <span class="calendar-mini-title">${escapeHtml(task.title)}</span>
+        <span class="calendar-mini-project">${escapeHtml(task.project)}</span>
+      </div>`;
+    }
+
+    function renderCalendar() {
+      const now = new Date();
+      const isCurrentMonth = calendarYear === now.getFullYear() && calendarMonth === now.getMonth();
+      const todayDate = now.getDate();
+      const MAX_CARDS = 3;
+
+      // Filter to current month in local timezone and group by day in single pass
+      // (Server already filters by project via ?project= param, no client-side filter needed)
+      calendarTasksByDay = {};
+      let monthTaskCount = 0;
+      for (const t of tasks) {
+        if (!t.due_at) continue;
+        const d = new Date(t.due_at);
+        if (d.getFullYear() !== calendarYear || d.getMonth() !== calendarMonth) continue;
+        const day = d.getDate();
+        if (!calendarTasksByDay[day]) calendarTasksByDay[day] = [];
+        calendarTasksByDay[day].push(t);
+        monthTaskCount++;
+      }
+
+      // Month label
+      const monthLabel = new Date(calendarYear, calendarMonth, 1)
+        .toLocaleDateString(undefined, { month: 'long', year: 'numeric' });
+
+      // First day of month (0=Sun) and number of days
+      const firstDow = new Date(calendarYear, calendarMonth, 1).getDay();
+      const daysInMonth = new Date(calendarYear, calendarMonth + 1, 0).getDate();
+      const daysInPrevMonth = new Date(calendarYear, calendarMonth, 0).getDate();
+
+      // Build header
+      let html = `
+        <div class="calendar-header">
+          <button class="calendar-nav-btn" id="calPrev">&larr;</button>
+          <div class="calendar-month-label">${escapeHtml(monthLabel)}</div>
+          <button class="calendar-nav-btn" id="calNext">&rarr;</button>
+          <button class="calendar-nav-btn" id="calToday">Today</button>
+        </div>
+      `;
+
+      // Empty state message (grid still renders for visual context)
+      if (monthTaskCount === 0) {
+        html += `<div class="calendar-empty-state">No tasks with due dates in ${escapeHtml(monthLabel)}</div>`;
+      }
+
+      html += `<div class="calendar-grid">`;
+
+      // Day-of-week headers
+      const dayNames = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'];
+      for (const d of dayNames) {
+        html += `<div class="calendar-day-header">${d}</div>`;
+      }
+
+      // Leading days from previous month
+      for (let i = firstDow - 1; i >= 0; i--) {
+        const day = daysInPrevMonth - i;
+        html += `<div class="calendar-day other-month"><span class="calendar-day-number">${day}</span></div>`;
+      }
+
+      // Current month days
+      for (let d = 1; d <= daysInMonth; d++) {
+        const isToday = isCurrentMonth && d === todayDate;
+        const dateStr = `${calendarYear}-${String(calendarMonth + 1).padStart(2, '0')}-${String(d).padStart(2, '0')}`;
+        html += `<div class="calendar-day${isToday ? ' today' : ''}" data-date="${dateStr}">`;
+        html += `<span class="calendar-day-number">${d}</span>`;
+        html += `<div class="calendar-day-tasks">`;
+
+        const dayTasks = calendarTasksByDay[d] || [];
+        const visible = dayTasks.slice(0, MAX_CARDS);
+        for (const t of visible) {
+          html += renderMiniCard(t);
+        }
+        if (dayTasks.length > MAX_CARDS) {
+          html += `<div class="calendar-more-link" data-date="${dateStr}">+${dayTasks.length - MAX_CARDS} more</div>`;
+        }
+
+        html += `</div></div>`;
+      }
+
+      // Trailing days to fill last week
+      const totalCells = firstDow + daysInMonth;
+      const trailingDays = (7 - (totalCells % 7)) % 7;
+      for (let d = 1; d <= trailingDays; d++) {
+        html += `<div class="calendar-day other-month"><span class="calendar-day-number">${d}</span></div>`;
+      }
+
+      html += `</div>`;
+      calendarContainer.innerHTML = html;
+
+      // Wire navigation (named functions to avoid re-adding anonymous listeners)
+      document.getElementById('calPrev').addEventListener('click', navPrev);
+      document.getElementById('calNext').addEventListener('click', navNext);
+      document.getElementById('calToday').addEventListener('click', navToday);
+    }
+
+    function navPrev() {
+      calendarMonth--;
+      if (calendarMonth < 0) { calendarMonth = 11; calendarYear--; }
+      poll();
+    }
+    function navNext() {
+      calendarMonth++;
+      if (calendarMonth > 11) { calendarMonth = 0; calendarYear++; }
+      poll();
+    }
+    function navToday() {
+      const today = new Date();
+      calendarYear = today.getFullYear();
+      calendarMonth = today.getMonth();
+      poll();
+    }
+
+    // Calendar popover for "+N more" links
+    let activePopover = null;
+    let popoverOutsideListener = null;
+
+    function dismissPopover() {
+      if (popoverOutsideListener) {
+        document.removeEventListener('click', popoverOutsideListener);
+        popoverOutsideListener = null;
+      }
+      if (activePopover) {
+        activePopover.remove();
+        activePopover = null;
+      }
+    }
+
+    function showCalendarPopover(dateStr, anchorEl) {
+      dismissPopover();
+
+      // Reuse grouped data from renderCalendar instead of re-filtering
+      const [y, m, d] = dateStr.split('-').map(Number);
+      const dayTasks = calendarTasksByDay[d] || [];
+
+      if (dayTasks.length === 0) return;
+
+      // Format date for header
+      const headerDate = new Date(y, m - 1, d)
+        .toLocaleDateString(undefined, { month: 'long', day: 'numeric' });
+
+      const popover = document.createElement('div');
+      popover.className = 'calendar-popover';
+      popover.innerHTML = `<div class="calendar-popover-header">${escapeHtml(headerDate)}</div>`
+        + dayTasks.map(t => renderMiniCard(t)).join('');
+
+      // Position below the anchor, clamped to viewport edges
+      const rect = anchorEl.getBoundingClientRect();
+      const popoverWidth = 280; // matches CSS max-width
+      const popoverMaxHeight = 300; // matches CSS max-height
+      const left = Math.min(rect.left, window.innerWidth - popoverWidth - 8);
+      // If popover would overflow bottom, position above the anchor instead
+      const spaceBelow = window.innerHeight - rect.bottom - 8;
+      const top = spaceBelow >= popoverMaxHeight
+        ? rect.bottom + 4
+        : Math.max(8, rect.top - popoverMaxHeight - 4);
+      popover.style.position = 'fixed';
+      popover.style.left = left + 'px';
+      popover.style.top = top + 'px';
+
+      document.body.appendChild(popover);
+      activePopover = popover;
+
+      // Dismiss on click-outside (next tick to avoid immediate dismiss)
+      setTimeout(() => {
+        popoverOutsideListener = function onClickOutside(e) {
+          if (activePopover && !activePopover.contains(e.target)) {
+            dismissPopover();
+          }
+        };
+        document.addEventListener('click', popoverOutsideListener);
+      }, 0);
+    }
+
+    // Event delegation for calendar interactions
+    calendarContainer.addEventListener('click', (e) => {
+      // "+N more" link
+      const moreLink = e.target.closest('.calendar-more-link');
+      if (moreLink) {
+        e.stopPropagation();
+        showCalendarPopover(moreLink.dataset.date, moreLink);
+        return;
+      }
+
+      // Mini card click → open task modal
+      const card = e.target.closest('.calendar-mini-card');
+      if (card) {
+        dismissPopover();
+        openTaskModal(card.dataset.taskId);
+        return;
+      }
+    });
+
+    // Also handle clicks inside popover (which is appended to body, not calendarContainer)
+    document.addEventListener('click', (e) => {
+      if (!activePopover) return;
+      const card = e.target.closest('.calendar-popover .calendar-mini-card');
+      if (card) {
+        dismissPopover();
+        openTaskModal(card.dataset.taskId);
+      }
+    });
 
     function renderBoard() {
       const showSubtasks = showSubtasksCheckbox.checked;
@@ -1897,6 +2273,12 @@
                 <div class="modal-meta-label">Created</div>
                 <div class="modal-meta-value">${formatTime(data.task.created_at)}</div>
               </div>
+              ${data.task.due_at ? `
+              <div class="modal-meta-item">
+                <div class="modal-meta-label">Due Date</div>
+                <div class="modal-meta-value">${new Date(data.task.due_at).toLocaleDateString()}</div>
+              </div>
+              ` : ''}
             </div>
           </div>
         `;
@@ -1908,7 +2290,7 @@
               <div class="modal-meta">
                 <div class="modal-meta-item">
                   <div class="modal-meta-label">Agent</div>
-                  <div class="modal-meta-value">${data.task.assignee}</div>
+                  <div class="modal-meta-value">${escapeHtml(data.task.assignee)}</div>
                 </div>
                 ${data.task.lease_until ? `
                   <div class="modal-meta-item">
@@ -2092,9 +2474,13 @@
         projectFilter.innerHTML = '<option value="">All projects</option>' +
           stats.projects.map(p => `<option value="${escapeHtml(p)}" ${p === currentProject ? 'selected' : ''}>${escapeHtml(p)}</option>`).join('');
 
-        renderBoard();
+        if (activeView === 'calendar') {
+          renderCalendar();
+        } else {
+          renderBoard();
+          updateGraphData();
+        }
         renderActivity();
-        updateGraphData();
 
         lastPollTime = Date.now();
         updateConnectionStatus(true);
@@ -2286,6 +2672,11 @@
 
     // View toggle (Kanban/Graph)
     function setActiveView(view) {
+      // Dismiss calendar popover when leaving calendar view
+      if (activeView === 'calendar' && view !== 'calendar') {
+        dismissPopover();
+      }
+
       activeView = view;
 
       // Update toggle buttons
@@ -2294,32 +2685,28 @@
       });
 
       // Show/hide containers
-      if (view === 'kanban') {
-        board.style.display = '';
-        graphContainer.classList.add('hidden');
-        mobileTabs.style.display = '';
-        document.getElementById('mobileCardsContainer').style.display = '';
+      board.style.display = view === 'kanban' ? '' : 'none';
+      calendarContainer.classList.toggle('hidden', view !== 'calendar');
+      graphContainer.classList.toggle('hidden', view !== 'graph');
+      mobileTabs.style.display = view === 'kanban' ? '' : 'none';
+      document.getElementById('mobileCardsContainer').style.display = view === 'kanban' ? '' : 'none';
 
-        // Pause graph to save CPU/memory when not visible
-        if (graphInstance) {
-          graphInstance.pauseAnimation();
-        }
-      } else {
-        board.style.display = 'none';
-        graphContainer.classList.remove('hidden');
-        mobileTabs.style.display = 'none';
-        document.getElementById('mobileCardsContainer').style.display = 'none';
+      // Hide date filter when calendar is active (calendar has its own month navigation)
+      dateFilter.closest('.filter-group').style.display = view === 'calendar' ? 'none' : '';
 
-        // Initialize graph on first view
+      // Pause/resume graph
+      if (view === 'graph') {
         if (!graphInitialized && typeof ForceGraph !== 'undefined') {
           initGraph();
         } else if (graphInstance) {
-          // Resume graph animation when switching back
           graphInstance.resumeAnimation();
         }
+      } else if (graphInstance) {
+        graphInstance.pauseAnimation();
       }
 
       savePreferences();
+      poll();
     }
 
     viewToggle.addEventListener('click', (e) => {
